--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,6 @@ allprojects {
     version = '1.0'
 
     jar {
-        manifest.attributes provider: 'my cool company'
+        manifest.attributes provider: 'bootcamp'
     }
 }
